; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_alloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_page_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@VM_PAGE_NULL = common dso_local global i64 0, align 8
@VM_PAGE_GRAB_SECLUDED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @vm_page_alloc(%struct.TYPE_5__* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = call i32 @vm_object_lock_assert_exclusive(%struct.TYPE_5__* %8)
  store i32 0, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = call i64 @vm_page_grab_options(i32 %10)
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* @VM_PAGE_NULL, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i64, i64* @VM_PAGE_NULL, align 8
  store i64 %16, i64* %3, align 8
  br label %23

17:                                               ; preds = %2
  %18 = load i64, i64* %6, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @vm_page_insert(i64 %18, %struct.TYPE_5__* %19, i32 %20)
  %22 = load i64, i64* %6, align 8
  store i64 %22, i64* %3, align 8
  br label %23

23:                                               ; preds = %17, %15
  %24 = load i64, i64* %3, align 8
  ret i64 %24
}

declare dso_local i32 @vm_object_lock_assert_exclusive(%struct.TYPE_5__*) #1

declare dso_local i64 @vm_page_grab_options(i32) #1

declare dso_local i32 @vm_page_insert(i64, %struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
